assert-struct/tests/snapshots/maps__exact_length_mismatch.snap
---
source: assert-struct/tests/maps.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/map_errors/exact_length_mismatch.rs:20:22
   |
20 |         string_map: #{ "key1": "value1" },
   |                      ^ got map with 2 entries
